docker-compose 新增postgresql 建立

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ awsapi/obj/Debug/net8.0/awsapi.AssemblyInfo.cs
 awsapi/obj/Debug/net8.0/awsapi.AssemblyInfoInputs.cache
 awsapi/obj/Debug/net8.0/awsapi.AssemblyInfo.cs
 awsapi/obj/Debug/net8.0/awsapi.AssemblyInfoInputs.cache
+awsapi/data/
