不追蹤多餘的檔案

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,20 @@ awsapi/obj/Debug/net8.0/awsapi.AssemblyInfoInputs.cache
 awsapi/obj/Debug/net8.0/awsapi.AssemblyInfo.cs
 awsapi/obj/Debug/net8.0/awsapi.AssemblyInfoInputs.cache
 awsapi/data/
+
+# Binaries
+bin/
+obj/
+
+# DLL and EXE files
+*.dll
+*.exe
+
+# PDB files
+*.pdb
+
+# NuGet and build caches
+*.deps.json
+*.dgspec.json
+*.assets.json
+*.nuget.cache
