完成建立帳戶跟登入帳戶

--- a/awsapi/appsettings.json
+++ b/awsapi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings":{
+    "dbConnection": "Host=127.0.0.1;Port=5432;Database=users;Username=postgres;Password=123456;"
+  },
+  "Jwt": {
+    "SignKey": "1u4u,3ru6g u,4ej/ xu4u.4yp3u;4hl4",
+    "IssUser":"1246ashit@gmail.com",
+    "ExpireMinutes": 60
+  }
 }
