--- a/awsapi/appsettings.json
+++ b/awsapi/appsettings.json
@@ -7,11 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings":{
-    "dbConnection": "Host=127.0.0.1;Port=5432;Database=users;Username=postgres;Password=123456;"
+    "dbConnection": "Host=awsapi-postgresdb-1;Port=5432;Database=users;Username=postgres;Password=123456;"
   },
   "Jwt": {
     "SignKey": "1u4u,3ru6g u,4ej/ xu4u.4yp3u;4hl4",
     "IssUser":"1246ashit@gmail.com",
     "ExpireMinutes": 60
+  },
+  "Swagger": {
+    "Enable": true
   }
 }
